--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Save with Odun" />
+    <meta name="keywords" content="Save, Odun" />
     <link rel="icon" type="image/svg+xml" href="src/assets/ODUNinv.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Save With Odun</title>
